infra/infrastructure/catalog/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: catalog
spec:
  headers:
    contentTypeNosniff: true
    frameDeny: true
    browserXssFilter: true
    referrerPolicy: same-origin
