infra/infrastructure/catalog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: catalog
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: catalog
  ports:
    - name: http
      port: 8080
      targetPort: http
